src/components/style.css
/* ... */
/**
 * BLOCK partner-logos
 *
 * Contains logos, primarily in the footer.
 */

.partner-logos {
  /* Display & Box Model */
  color: var(--prose-title-color);
  display: grid;
  width: 100%;
  margin-top: var(--small-pad);

  /* Grid */
  grid-template-columns: 33% 33% 33%;
  grid-template-rows: repeat(3, 1fr);
  justify-items: stretch;
  align-items: center;
}

/**
 * ELEMENT partner-logos__logo
 *
 * One particular logo.
 */

.partner-logos__logo {
  /* Display & Box Model */
  margin: var(--small-pad) 0.5rem;

  /* Text */
  text-align: center;
}

/**
 * Modifier for wide logos (e.g., NRC/SSHRC)
 */

.partner-logos__logo--full-width {
  grid-column: 1 / span 3;
}

.partner-logos__logo:hover {
  background-color: rgba(50% 50% 50% / 50%);
}

.partner-logos__logo > img {
  max-width: 100%;
  max-height: 8rem;
  vertical-align: middle;
}
/**************************** Some util elements ****************************/
/**
 * ELEMENT sr-only
 *
 * Let something be part of the accessiblity tree without showing it to
 * screens and print.
 */

.sr-only {
  position: absolute;

  width: 1px;
  height: 1px;

  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
  -webkit-clip-path: inset(1px 1px 1px 1px);
  clip-path: inset(1px 1px 1px 1px);
  pointer-events: none;
}

/**
 * Makes a <button> look like a link.
 */

.unbutton {
  border: 0;
  padding: 0;

  text-align: inherit;

  color: inherit;
  background: transparent;

  cursor: pointer;
}

.link {
  text-decoration: underline;
}

/**
 * Place this on a <ul> or <ol> to get rid of the bullets and weird
 * indentation.
 */

.unbullet {
  margin: 0;
  padding: 0;

  list-style: none;
}

/**
 * Left-align search result definitions
 */

.result-definition {
  text-align: left;
}

/**
 * Fill the width of the container.
 */

.fill-width {
  width: 100%;
}

/**
 * .close-on-click-away
 *
 * Creates an area behind <details> pop-up that, when clicked/touched, will
 * inadvertently toggle the menu away.
 */

.close-on-click-away[open] > summary::before {
  content: " ";

  /* Position: fills FULL AREA of the screen */
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  /* Display & Box model */
  display: block;

  /* Color */
  background: transparent;

  /* Other */
  cursor: default;
}

/******************************** DEFINITION ********************************/

.definition-title {
  font-size: var(--definition-title-size);
  margin: 0;
}

.definition-title__title {
  display: inline;
  font-size: inherit;
}

.definition-title__inflectional-class {
  font-style: italic;
  font-size: 0.66em;
}

.definition__matched-head {
  /* Text */
  font-style: normal;
  font-weight: var(--strong-font-weight);
}

.definition__icons {
  display: inline;
}

.definition-title__tooltip-text {
  font-size: 0.5em;
  font-weight: normal;
}

.definition-title__tooltip-icon {
  display: inline-block;
}

.definition-title__tooltip-icon > img {
  width: var(--tooltip-icon-size);
  filter: var(--blue-filter); /* blue color */

  vertical-align: middle;
}

.definition-title__tooltip-icon:focus,
.definition-title__tooltip-icon:focus-within {
  outline: 3px solid var(--search-focus-color);
}

.definition__elaboration {
  margin: var(--small-gap) 0 0;

  font-size: var(--elaboration-size);
}

.definition__reference-to-lemma {
  font-style: italic;
}

/**
 * The actual SVG for the 🔊 icon and the speaker playback/external link buttons
 */

.definition-title__play-icon,
.speaker-playback-action-button {
  width: 100%;
}

.elaboration__row {
  /* There's normally TOO MUCH MARGIN for these, so get rid of it: */
  margin-block: 0;
}

.elaboration__ic-row {
  /* make the font a lil' lighter */
  color: var(--deemphasized-text-color);
}

/**
 * ELEMENT play-button
 *
 * Should be a button that looks like a link.
 */

.definition-title__play-button {
  /* Reset the button appearance: */
  width: 1em;
  padding: 0;
  border: 0;
  margin: 0;

  /* Inline properties: */
  vertical-align: middle;

  /* Color: */
  color: var(--play-button-color);
  background: transparent;

  /* Make it look like a link. */
  cursor: pointer;

  /* Subtle transition when hovering. */
  transition: 0.1s filter;
  filter: brightness(100%);
}
.multiple-recordings__action-button {
  /* Reset the button appearance: */
  width: 1em;
  padding: 0;
  border: 0;
  margin: 0;

  /* Inline properties: */
  vertical-align: middle;

  /* Color: */
  color: var(--play-button-color);
  background: transparent;

  /* Make it look like a link. */
  cursor: pointer;

  /* Subtle transition when hovering. */
  transition: 0.1s filter;
  filter: brightness(100%);
}

.definition-title__play-button:hover {
  /* Make the button lighter when hovered. */
  filter: brightness(150%);
}

.definition__recordings {
  font-style: italic;
}

.definition__recordings--not-loaded {
  display: none;
}

.recordings-list__item {
  list-style: upper-roman;
  margin-bottom: var(--small-pad);
}

.recordings-list__item:hover {
  cursor: pointer;
}

/**
 * ELEMENT speaker-play-button
 *
 * Makes the SVG of the speaker-playback look like a button.
 */

.multiple-recordings__action-button {
  margin-left: 0.5em;
}

a.multiple-recordings__action-button {
  font-weight: var(--body-font-weight);
  font-style: italic;
}

/**
 * BLOCK wordclass
 */

.wordclass {
  /* Text */
  font-style: normal;
  font-weight: var(--body-font-weight);
}

/**
 * MODIFIER described
 *
 * This wordclass is described by a tooltip
 */

.wordclass--described {
  text-decoration: underline dotted;

  cursor: help;
}

/**
 * ELEMENT inflectional-class
 *
 * The fully-written inflectional class.
 */

.wordclass__inflectional-class {
  font-size: smaller;
}

/* Embedded content
   ========================================================================== */

/**
 * Remove the border on images inside links in IE 10.
 */

img {
  border-style: none;
}
/* ... */

